[package]
name = "nucleo-wl55jc2"
version = "0.1.0"
authors = ["Alex Martens <alexmgit@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Boilerplate for the Nucleo-WL55JC2 development board."

[badges]
maintenance = { status = "experimental" }

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
rtt-target = { version = "0.3", features = ["cortex-m"] }
stm32wlxx-hal = { version = "0.4", features = ["stm32wl5x_cm4"] }
